[gd_scene load_steps=14 format=3 uid="uid://8eie8ujdfvvp"]

[ext_resource type="Script" path="res://Scripts/MasterMap.gd" id="1_j61j8"]
[ext_resource type="AudioStream" uid="uid://bejahe2fy5nkq" path="res://Sounds/Music_Level_Intro.wav" id="2_8co8p"]
[ext_resource type="AudioStream" uid="uid://dmkbq1bs7p1xn" path="res://Sounds/Music_Level_Loop.wav" id="3_jrm3l"]
[ext_resource type="PackedScene" uid="uid://dt37pu15neacu" path="res://Scenes/Tank_P1.tscn" id="5_4esn0"]
[ext_resource type="PackedScene" uid="uid://t84dudbhvqpm" path="res://Scenes/Tank_P2.tscn" id="6_4gl01"]
[ext_resource type="PackedScene" uid="uid://1cq8hv1ctsgr" path="res://Scenes/PowerUpSpawner.tscn" id="7_7rd6g"]
[ext_resource type="PackedScene" uid="uid://cwnryqgu1h2dg" path="res://Scenes/HUD.tscn" id="8_ylj7l"]
[ext_resource type="PackedScene" uid="uid://cnpxbag7w6e06" path="res://Scenes/PauseMenu.tscn" id="9_gv0g5"]
[ext_resource type="Theme" uid="uid://sc8pk13o4m7a" path="res://Themes/DefaultTheme.tres" id="10_6o03m"]
[ext_resource type="Script" path="res://Scripts/Countdown.gd" id="11_d2dgr"]
[ext_resource type="PackedScene" uid="uid://cwncwruhbq443" path="res://Scenes/GameOverOverlay.tscn" id="12_rljok"]
[ext_resource type="Shader" path="res://Shader/CRTShader.gdshader" id="13_yfd21"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfpui"]
shader = ExtResource("13_yfd21")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.044
shader_parameter/scanlines_width = 0.028
shader_parameter/grille_opacity = 0.046
shader_parameter/resolution = Vector2(2560, 1440)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 0.71
shader_parameter/roll_size = 6.269
shader_parameter/roll_variation = 2.745
shader_parameter/distort_intensity = 0.005
shader_parameter/noise_opacity = 0.075
shader_parameter/noise_speed = 0.99
shader_parameter/static_noise_intensity = 0.067
shader_parameter/aberration = 0.00500005
shader_parameter/brightness = 1.4
shader_parameter/discolor = false
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = true
shader_parameter/vignette_intensity = 0.26
shader_parameter/vignette_opacity = 0.81

[node name="World" type="Node2D"]
script = ExtResource("1_j61j8")

[node name="LevelMusicIntro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_8co8p")
autoplay = true

[node name="LevelMusicLoop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jrm3l")

[node name="Game" type="CanvasLayer" parent="."]

[node name="Tank_P1" parent="Game" instance=ExtResource("5_4esn0")]
position = Vector2(167, 527)
scale = Vector2(0.1, 0.1)
safe_margin = 0.08

[node name="Tank_P2" parent="Game" instance=ExtResource("6_4gl01")]
position = Vector2(1809, 527)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
safe_margin = 0.08

[node name="PowerUpSpawner" parent="Game" instance=ExtResource("7_7rd6g")]
position = Vector2(916, 549)

[node name="HUD" parent="Game" instance=ExtResource("8_ylj7l")]
offset_top = 1202.0
offset_bottom = 1202.0

[node name="StartScreen" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="StartScreen" parent="StartScreen" instance=ExtResource("9_gv0g5")]
script = null

[node name="TimerLabel" type="Label" parent="StartScreen"]
process_mode = 3
offset_left = 656.0
offset_top = 704.0
offset_right = 1292.0
offset_bottom = 957.0
theme = ExtResource("10_6o03m")
theme_override_font_sizes/font_size = 250
horizontal_alignment = 1
script = ExtResource("11_d2dgr")

[node name="StartCD" type="Timer" parent="StartScreen"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Pause" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="Pause" instance=ExtResource("9_gv0g5")]
visible = false
metadata/_edit_vertical_guides_ = [975.0]

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="GameOverOverlay" parent="GameOver" instance=ExtResource("12_rljok")]

[node name="Shader" type="CanvasLayer" parent="."]

[node name="CRT Shader" type="ColorRect" parent="Shader"]
material = SubResource("ShaderMaterial_qfpui")
offset_left = -122.0
offset_top = -123.0
offset_right = 2073.0
offset_bottom = 1343.0
scale = Vector2(1.00354, 1.00222)
mouse_filter = 2
metadata/_edit_lock_ = true

[connection signal="MapLoaded" from="." to="Game/PowerUpSpawner" method="_on_world_map_loaded"]
[connection signal="finished" from="LevelMusicIntro" to="." method="_on_level_music_intro_finished"]
[connection signal="playerDied" from="Game/Tank_P1" to="." method="_on_tank_p_1_player_died"]
[connection signal="playerDied" from="Game/Tank_P2" to="." method="_on_tank_p_2_player_died"]
